<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_backup"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="gdrive_enabled"
            android:title="@string/settings_gdrive_sync"
            android:summary="@string/settings_gdrive_sync_summary"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="gdrive_account"
            android:title="@string/settings_gdrive_account"
            android:summary="@string/settings_gdrive_account_summary"
            app:iconSpaceReserved="false"
            android:dependency="gdrive_enabled" />

        <Preference
            android:key="backup_now"
            android:title="@string/settings_backup_now"
            android:summary="@string/settings_backup_now_summary"
            app:iconSpaceReserved="false"
            android:dependency="gdrive_enabled" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_storage"
        app:iconSpaceReserved="false">

        <Preference
            android:key="clear_local_data"
            android:title="@string/settings_clear_local_data"
            android:summary="@string/settings_clear_local_data_summary"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="storage_usage"
            android:title="@string/settings_storage_usage"
            android:summary="@string/settings_storage_usage_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen> 